# fib40

./: README.md
flask/: README.md  fib40.py
iron/: Cargo.toml  README.md
iron/src/: main.rs
node-js/: README.md  fib40.js
python/: README.md  fib40.py
rails_fib/: package.json
rails_fib/app/controllers/: pages_controller.rb
rails_fib/app/views/layouts/: application.html.erb
rails_fib/config/: application.rb  cable.yml  secrets.yml
rails_fib/config/environments/: production.rb
spock/: README.md  default.nix  spock.cabal
spock/app/: Main.hs
yesod/: README.md  default.nix  yesod-fib40.cabal
yesod/app/: Main.hs
