name:                yesod-fib40
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vmchale/yesod#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2017 Vanessa McHale
--category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , stack.yaml
                   , .travis.yml
cabal-version:       >=1.10

executable yesod-fib40
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yesod
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/yesod
